--- a/contact.html
+++ b/contact.html
@@ -2,36 +2,36 @@
 <html lang="en">
 
 <head>
-  <title>Paramartha Agro</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<title>Paramartha Agro</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:500,600,700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:500,600,700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
-  <link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
+	<link rel="stylesheet" href="css/animate.css">
 
-  <link rel="stylesheet" href="css/owl.carousel.min.css">
-  <link rel="stylesheet" href="css/owl.theme.default.min.css">
-  <link rel="stylesheet" href="css/magnific-popup.css">
+	<link rel="stylesheet" href="css/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/owl.theme.default.min.css">
+	<link rel="stylesheet" href="css/magnific-popup.css">
 
-  <link rel="stylesheet" href="css/aos.css">
+	<link rel="stylesheet" href="css/aos.css">
 
-  <link rel="stylesheet" href="css/ionicons.min.css">
+	<link rel="stylesheet" href="css/ionicons.min.css">
 
-  <link rel="stylesheet" href="css/bootstrap-datepicker.css">
-  <link rel="stylesheet" href="css/jquery.timepicker.css">
+	<link rel="stylesheet" href="css/bootstrap-datepicker.css">
+	<link rel="stylesheet" href="css/jquery.timepicker.css">
 
 
-  <link rel="stylesheet" href="css/flaticon.css">
-  <link rel="stylesheet" href="css/icomoon.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/joinchat.css">
-  <link rel="stylesheet" href="css/joinchat.min.css">
+	<link rel="stylesheet" href="assets/font/flaticon.css">
+	<link rel="stylesheet" href="css/icomoon.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/joinchat.css">
+	<link rel="stylesheet" href="css/joinchat.min.css">
 
-  <link rel="shortcut icon" href="logo.png" type="image/x-icon">
-  <link rel="icon" href="logo.png" type="image/x-icon">
+	<link rel="shortcut icon" href="logo.png" type="image/x-icon">
+	<link rel="icon" href="logo.png" type="image/x-icon">
 </head>
 
 
@@ -60,25 +60,89 @@
 	</nav>
 	<!-- END nav -->
 
-  <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg-1.jpg');"
-    data-stellar-background-ratio="0.5">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
-        <div class="col-md-9 ftco-animate pb-5 text-center">
-          <h2 class="mb-0 bread">Contact</h2>
-          <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i
-                  class="ion-ios-arrow-round-forward"></i></a></span> <span>Contact <i
-                class="ion-ios-arrow-round-forward"></i></span></p>
-        </div>
-      </div>
-    </div>
-  </section>
+	<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg-1.jpg');"
+		data-stellar-background-ratio="0.5">
+		<div class="overlay"></div>
+		<div class="container">
+			<div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
+				<div class="col-md-9 ftco-animate pb-5 text-center">
+					<h2 class="mb-0 bread">Contact</h2>
+					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i
+									class="ion-ios-arrow-round-forward"></i></a></span> <span>Contact <i
+								class="ion-ios-arrow-round-forward"></i></span></p>
+				</div>
+			</div>
+		</div>
+	</section>
 
-  
+	<section class="services-section ftco-section">
+		<div class="container">
+			<div class="row justify-content-center pb-3">
+				<div class="col-md-10 heading-section text-center ftco-animate">
+					<h2 class="mb-4">Contact us</h2>
+					<span class="subheading">For your details</span>
+				</div>
+			</div>
+			<div class="row no-gutters d-flex">
+				<div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+					<div class="media block-6 services d-block text-center">
+						<div class="icon"><span class="flaticon-phone-call"></span></div>
+						<div class="media-body">
+							<h3 class="heading mb-3">Phone/Whatsapp</h3>
+							<p>Contact us directly by our whatsapp at +6285722754077</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+					<div class="media block-6 services d-block text-center">
+						<div class="icon"><span class="flaticon-home"></span></div>
+						<div class="media-body">
+							<h3 class="heading mb-3">Address</h3>
+							<p>Jalan Damar 5 No. 10 Komplek Buana Soetta, Bandung, Indonesia</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+					<div class="media block-6 services d-block text-center">
+						<div class="icon"><span class="flaticon-email"></span></div>
+						<div class="media-body">
+							<h3 class="heading mb-3">Email</h3>
+							<p>For other correspondence you can contact us on info@paramarthaagro.com</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+					<div class="media block-6 services d-block text-center">
+						<div class="icon"><span class="flaticon-web-search-engine"></span></div>
+						<div class="media-body">
+							<h3 class="heading mb-3">Website</h3>
+							<p>Visit our amazing website and look everything about us at www.paramarthaagro.com</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="services-section ftco-section">
+		<div class="container">
+			<div class="row justify-content-center pb-3">
+				<div class="col-md-10 heading-section text-center ftco-animate">
+					<h2 class="mb-4">Location</h2>
+					<span class="subheading">Jalan Damar 5 No. 10 <br> Komplek Buana Soetta <br>Bandung, Indonesia</span>
+				</div>
+			</div>
+			<div class="map">
+				<iframe
+					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1980.2835435574827!2d107.68863513645914!3d-6.9422276751776035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e384fce4d97d%3A0xe06ba18fb4d2e414!2sKomplek%20Perumahan%20Buana%20Soetta%20Residence!5e0!3m2!1sen!2sid!4v1612084178651!5m2!1sen!2sid"
+					width="1200" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+					tabindex="0"></iframe>
+			</div>
+		</div>
+	</section>
 
 
-  <footer class="ftco-footer ftco-section">
+	<footer class="ftco-footer ftco-section">
 		<div class="container">
 			<div class="row mb-5">
 				<div class="col-md">
@@ -89,7 +153,8 @@
 						<p> <br> Paramartha Agro is a company that provides agro products that are processed
 							organically
 							and
-							have certificates with international standards. We take care of the quality and trust of
+							have certificates with international standards. We take care of the quality and
+							trust of
 							our
 							consumers as well as our partners, because our principle is great business is if
 							everyone
@@ -131,7 +196,8 @@
 						<h2 class="ftco-heading-2">Have a Questions?</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><span class="icon icon-map-marker"></span><span class="text">Jalan Damar 5 No.
+								<li><span class="icon icon-map-marker"></span><span class="text">Jalan Damar 5
+										No.
 										10
 										<br> Komplek Buana Soetta, <br> Gedebage, Bandung, <br> Indonesia</span>
 								</li>
