--- a/termcondition.html
+++ b/termcondition.html
@@ -2,12 +2,13 @@
 <html lang="en">
 
 <head>
-  <title>Paramartha Agro</title>
+  <title>Term and Conditions</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:500,600,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
   <link rel="stylesheet" href="css/animate.css">
@@ -24,7 +25,7 @@
   <link rel="stylesheet" href="css/jquery.timepicker.css">
 
 
-  <link rel="stylesheet" href="css/flaticon.css">
+  <link rel="stylesheet" href="assets/font/flaticon.css">
   <link rel="stylesheet" href="css/icomoon.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/joinchat.css">
@@ -33,6 +34,7 @@
   <link rel="shortcut icon" href="logo.png" type="image/x-icon">
   <link rel="icon" href="logo.png" type="image/x-icon">
 </head>
+
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
@@ -48,22 +50,17 @@
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-          <li class="nav-item dropdown active">
-            <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true"
-              aria-expanded="false">Products</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown02">
-              <a class="dropdown-item" href="product-single.html">Java Preanger Coffee</a>
-              <a class="dropdown-item" href="product-single.html">Charcoal Briquettes</a>
-            </div>
-          </li>
+          <li class="nav-item"><a href="product.html" class="nav-link">Products</a></li>
           <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
           <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
           <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+          <li class="nav-item"><a href="faq.html" class="nav-link">FaQ</a></li>
         </ul>
       </div>
     </div>
   </nav>
   <!-- END nav -->
+
 
   <section class="hero-wrap hero-wrap-2" style="background-image: url('images/coffee.jpg');"
     data-stellar-background-ratio="0.5">
@@ -71,7 +68,7 @@
     <div class="container">
       <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
         <div class="col-md-9 ftco-animate pb-5 text-center">
-          <h2 class="mb-0 bread">Terms Condition</h2>
+          <h2 class="mb-0 bread">Term Conditions</h2>
           <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i
                   class="ion-ios-arrow-round-forward"></i></a></span> <span>Term and Conditions <i
                 class="ion-ios-arrow-round-forward"></i></span></p>
@@ -287,18 +284,23 @@
       <div class="row mb-5">
         <div class="col-md">
           <div class="ftco-footer-widget mb-4">
-            <a class="ftco-heading-2 logo" href="index.html">
-              <img src="images/logo2.png" alt="Homepage">
+            <a class="ftco-heading-2 foot-logo" href="index.html">
+              <img src="images/logoo.png" alt="Homepage">
             </a>
-            <p> <br> Paramartha Agro is a company that provides agro products that are processed organically
+            <p> <br> Paramartha Agro is a company that provides agro products that are processed
+              organically
               and
-              have certificates with international standards. We take care of the quality and trust of our
-              consumers as well as our partners, because our principle is great business is if everyone
+              have certificates with international standards. We take care of the quality and
+              trust of
+              our
+              consumers as well as our partners, because our principle is great business is if
+              everyone
               WIN!</p>
             <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
               <li class="ftco-animate"><a href="https://linkedin.com/company/Paramartha-Agro" target="_blank"><span
                     class="icon-linkedin"></span></a></li>
-              <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
+              <li class="ftco-animate"><a href="https://www.facebook.com/Paramartha-Agro-106958891377926"
+                  target="_blank"><span class="icon-facebook"></span></a></li>
               <li class="ftco-animate"><a href="https://instagram.com/paramarthagro" target="_blank"><span
                     class="icon-instagram"></span></a></li>
             </ul>
@@ -310,7 +312,7 @@
             <ul class="list-unstyled">
               <li><a href="faq.html" class="py-2 d-block">FAQs</a></li>
               <li><a href="privacy.html" class="py-2 d-block">Privacy</a></li>
-              <li><a href="#" class="py-2 d-block">Terms Condition</a></li>
+              <li><a href="#" class="py-2 d-block smoothscrolld">Terms Condition</a></li>
             </ul>
           </div>
         </div>
@@ -318,8 +320,8 @@
           <div class="ftco-footer-widget mb-4">
             <h2 class="ftco-heading-2">Links</h2>
             <ul class="list-unstyled">
-              <li><a href="#" class="py-2 d-block smoothscroll">Home</a></li>
-              <li><a href="services.html" class="py-2 d-block">Product</a></li>
+              <li><a href="index.html" class="py-2 d-block">Home</a></li>
+              <li><a href="product.html" class="py-2 d-block">Products</a></li>
               <li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
               <li><a href="about.html" class="py-2 d-block">About</a></li>
               <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
@@ -331,11 +333,15 @@
             <h2 class="ftco-heading-2">Have a Questions?</h2>
             <div class="block-23 mb-3">
               <ul>
-                <li><span class="icon icon-map-marker"></span><span class="text">Jalan Damar 5 No. 10
-                    <br> Komplek Buana Soetta, <br> Gedebage, Bandung, <br> Indonesia</span></li>
+                <li><span class="icon icon-map-marker"></span><span class="text">Jalan Damar 5
+                    No.
+                    10
+                    <br> Komplek Buana Soetta, <br> Gedebage, Bandung, <br> Indonesia</span>
+                </li>
                 <li><a
                     href="https://api.whatsapp.com/send?phone=6285722754077&text=I%27m%20interested%20in%20your%20briquette%20for%20sale"
-                    target="_blank"><span class="icon icon-phone"></span><span class="text">+62 857
+                    target="_blank"><span class="icon icon-phone"></span><span class="text">+62
+                      857
                       2275
                       4077</span></a></li>
                 <li><a href="mailto:paramarthaagro@gmail.com" target="_blank"><span
