--- a/privacy.html
+++ b/privacy.html
@@ -2,12 +2,13 @@
 <html lang="en">
 
 <head>
-  <title>Paramartha Agro</title>
+  <title>Privacy Policy</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:500,600,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
   <link rel="stylesheet" href="css/animate.css">
@@ -24,7 +25,7 @@
   <link rel="stylesheet" href="css/jquery.timepicker.css">
 
 
-  <link rel="stylesheet" href="css/flaticon.css">
+  <link rel="stylesheet" href="assets/font/flaticon.css">
   <link rel="stylesheet" href="css/icomoon.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/joinchat.css">
@@ -36,29 +37,30 @@
 
 
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-		<div class="container">
-			<a class="site-logo" href="index.html">
-				<img src="images/logo.png" alt="Homepage">
-			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
-				aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="oi oi-menu"></span> Menu
-			</button>
+  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+    <div class="container">
+      <a class="site-logo" href="index.html">
+        <img src="images/logo.png" alt="Homepage">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
+        aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="oi oi-menu"></span> Menu
+      </button>
 
-			<div class="collapse navbar-collapse" id="ftco-nav">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-					<li class="nav-item"><a href="product.html" class="nav-link">Products</a></li>
-					<li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-					<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-					<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-					<li class="nav-item"><a href="faq.html" class="nav-link">FaQ</a></li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-	<!-- END nav -->
+      <div class="collapse navbar-collapse" id="ftco-nav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="product.html" class="nav-link">Products</a></li>
+          <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
+          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+          <li class="nav-item active"><a href="#" class="nav-link">FaQ</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- END nav -->
+
 
   <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg-pr.jpg');"
     data-stellar-background-ratio="0.5">
@@ -408,125 +410,127 @@
   <!--/ Main container end -->
 
   <footer class="ftco-footer ftco-section">
-		<div class="container">
-			<div class="row mb-5">
-				<div class="col-md">
-					<div class="ftco-footer-widget mb-4">
-						<a class="ftco-heading-2 logo" href="index.html">
-							<img src="images/logo2.png" alt="Homepage">
-						</a>
-						<p> <br> Paramartha Agro is a company that provides agro products that are processed
-							organically
-							and
-							have certificates with international standards. We take care of the quality and trust of
-							our
-							consumers as well as our partners, because our principle is great business is if
-							everyone
-							WIN!</p>
-						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-							<li class="ftco-animate"><a href="https://linkedin.com/company/Paramartha-Agro"
-									target="_blank"><span class="icon-linkedin"></span></a></li>
-							<li class="ftco-animate"><a href="https://www.facebook.com/Paramartha-Agro-106958891377926"
-									target="_blank"><span class="icon-facebook"></span></a></li>
-							<li class="ftco-animate"><a href="https://instagram.com/paramarthagro" target="_blank"><span
-										class="icon-instagram"></span></a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-md">
-					<div class="ftco-footer-widget mb-4 ml-md-5">
-						<h2 class="ftco-heading-2">Information</h2>
-						<ul class="list-unstyled">
-							<li><a href="faq.html" class="py-2 d-block">FAQs</a></li>
-							<li><a href="#" class="py-2 d-block smoothscroll">Privacy</a></li>
-							<li><a href="termcondition.html" class="py-2 d-block">Terms Condition</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-md">
-					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2">Links</h2>
-						<ul class="list-unstyled">
-							<li><a href="index.html" class="py-2 d-block">Home</a></li>
-							<li><a href="product.html" class="py-2 d-block">Products</a></li>
-							<li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
-							<li><a href="about.html" class="py-2 d-block">About</a></li>
-							<li><a href="contact.html" class="py-2 d-block">Contact</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-md">
-					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2">Have a Questions?</h2>
-						<div class="block-23 mb-3">
-							<ul>
-								<li><span class="icon icon-map-marker"></span><span class="text">Jalan Damar 5 No.
-										10
-										<br> Komplek Buana Soetta, <br> Gedebage, Bandung, <br> Indonesia</span>
-								</li>
-								<li><a href="https://api.whatsapp.com/send?phone=6285722754077&text=I%27m%20interested%20in%20your%20briquette%20for%20sale"
-										target="_blank"><span class="icon icon-phone"></span><span class="text">+62
-											857
-											2275
-											4077</span></a></li>
-								<li><a href="mailto:paramarthaagro@gmail.com" target="_blank"><span
-											class="icon icon-envelope"></span><span
-											class="text">info@paramarthaagro.com</span></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-12 text-center">
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col-md">
+          <div class="ftco-footer-widget mb-4">
+            <a class="ftco-heading-2 foot-logo" href="index.html">
+              <img src="images/logoo.png" alt="Homepage">
+            </a>
+            <p> <br> Paramartha Agro is a company that provides agro products that are processed
+              organically
+              and
+              have certificates with international standards. We take care of the quality and
+              trust of
+              our
+              consumers as well as our partners, because our principle is great business is if
+              everyone
+              WIN!</p>
+            <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
+              <li class="ftco-animate"><a href="https://linkedin.com/company/Paramartha-Agro" target="_blank"><span
+                    class="icon-linkedin"></span></a></li>
+              <li class="ftco-animate"><a href="https://www.facebook.com/Paramartha-Agro-106958891377926"
+                  target="_blank"><span class="icon-facebook"></span></a></li>
+              <li class="ftco-animate"><a href="https://instagram.com/paramarthagro" target="_blank"><span
+                    class="icon-instagram"></span></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md">
+          <div class="ftco-footer-widget mb-4 ml-md-5">
+            <h2 class="ftco-heading-2">Information</h2>
+            <ul class="list-unstyled">
+              <li><a href="faq.html" class="py-2 d-block">FAQs</a></li>
+              <li><a href="privacy.html" class="py-2 d-block">Privacy</a></li>
+              <li><a href="#" class="py-2 d-block smoothscrolld">Terms Condition</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md">
+          <div class="ftco-footer-widget mb-4">
+            <h2 class="ftco-heading-2">Links</h2>
+            <ul class="list-unstyled">
+              <li><a href="index.html" class="py-2 d-block">Home</a></li>
+              <li><a href="product.html" class="py-2 d-block">Products</a></li>
+              <li><a href="gallery.html" class="py-2 d-block">Gallery</a></li>
+              <li><a href="about.html" class="py-2 d-block">About</a></li>
+              <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md">
+          <div class="ftco-footer-widget mb-4">
+            <h2 class="ftco-heading-2">Have a Questions?</h2>
+            <div class="block-23 mb-3">
+              <ul>
+                <li><span class="icon icon-map-marker"></span><span class="text">Jalan Damar 5
+                    No.
+                    10
+                    <br> Komplek Buana Soetta, <br> Gedebage, Bandung, <br> Indonesia</span>
+                </li>
+                <li><a
+                    href="https://api.whatsapp.com/send?phone=6285722754077&text=I%27m%20interested%20in%20your%20briquette%20for%20sale"
+                    target="_blank"><span class="icon icon-phone"></span><span class="text">+62
+                      857
+                      2275
+                      4077</span></a></li>
+                <li><a href="mailto:paramarthaagro@gmail.com" target="_blank"><span
+                      class="icon icon-envelope"></span><span class="text">info@paramarthaagro.com</span></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 text-center">
 
-					<p>
-						Copyright &copy; Paramartha <a href="www.instagram.com/paramarthagro/" target="blank"
-							style="color: rgb(190, 145, 90);">Agro</a>
-						<script>document.write(new Date().getFullYear());</script> <br> All rights reserved
-					</p>
-				</div>
-			</div>
-		</div>
-	</footer>
+          <p>
+            Copyright &copy; Paramartha <a href="www.instagram.com/paramarthagro/" target="blank"
+              style="color: rgb(190, 145, 90);">Agro</a>
+            <script>document.write(new Date().getFullYear());</script> <br> All rights reserved
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
-	<!-- Chat-->
-	<div class="joinchat joinchat--right joinchat--dark-auto"
-		data-settings='{"telephone":"6285722754077","mobile_only":false,"button_delay":1,"whatsapp_web":true,"message_views":2,"message_delay":5,"message_badge":false,"message_send":"Hi, Paramartha!","message_hash":"2bca28a0"}'>
-		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
-		<div class="elfsight-app-c81d22a6-5ebc-428d-8327-5595d2113b34"></div>
-	</div>
-
-
-	<!-- loader -->
-	<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
-			<circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
-			<circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
-				stroke="#F96D00" />
-		</svg>
-	</div>
+  <!-- Chat-->
+  <div class="joinchat joinchat--right joinchat--dark-auto"
+    data-settings='{"telephone":"6285722754077","mobile_only":false,"button_delay":1,"whatsapp_web":true,"message_views":2,"message_delay":5,"message_badge":false,"message_send":"Hi, Paramartha!","message_hash":"2bca28a0"}'>
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+    <div class="elfsight-app-c81d22a6-5ebc-428d-8327-5595d2113b34"></div>
+  </div>
 
 
-	<script src="js/jquery.min.js"></script>
-	<script src="js/jquery-migrate-3.0.1.min.js"></script>
-	<script src="js/popper.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery.easing.1.3.js"></script>
-	<script src="js/jquery.waypoints.min.js"></script>
-	<script src="js/jquery.stellar.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/aos.js"></script>
-	<script src="js/jquery.animateNumber.min.js"></script>
-	<script src="js/bootstrap-datepicker.js"></script>
-	<script src="js/jquery.timepicker.min.js"></script>
-	<script src="js/scrollax.min.js"></script>
-	<script
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-	<script src="js/google-map.js"></script>
-	<script src="js/main.js"></script>
-	<script src="js/joinchat.js"></script>
-	<script src="js/jquery.min.js"></script>
+  <!-- loader -->
+  <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
+      <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
+      <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
+        stroke="#F96D00" />
+    </svg>
+  </div>
+
+
+  <script src="js/jquery.min.js"></script>
+  <script src="js/jquery-migrate-3.0.1.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/jquery.easing.1.3.js"></script>
+  <script src="js/jquery.waypoints.min.js"></script>
+  <script src="js/jquery.stellar.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/jquery.magnific-popup.min.js"></script>
+  <script src="js/aos.js"></script>
+  <script src="js/jquery.animateNumber.min.js"></script>
+  <script src="js/bootstrap-datepicker.js"></script>
+  <script src="js/jquery.timepicker.min.js"></script>
+  <script src="js/scrollax.min.js"></script>
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+  <script src="js/google-map.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/joinchat.js"></script>
+  <script src="js/jquery.min.js"></script>
 
 </body>
 
