--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 							<a href="#" class="team text-center">
 								<div class="img" style="background-image: url(images/stylist-5.jpg);"></div>
 								<h2>Muhammad Rizal F.</h2>
-								<span class="position">Public Relation</span>
+								<span class="position">Director</span>
 							</a>
 						</div>
 					</div>
