--- a/gallery.html
+++ b/gallery.html
@@ -91,48 +91,48 @@
       <div class="row no-gutters">
         <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="project">
-            <img src="images/work-1.jpg" class="img-fluid" alt="Colorlib Template">
+            <img src="images/gallery-1.jpg" class="img-fluid" alt="Colorlib Template">
             <div class="text">
-              <span>Best</span>
-              <h3><a href="project.html">Coconut</a></h3>
+              <span>Our</span>
+              <h3><a href="project.html">Charcoal</a></h3>
             </div>
-            <a href="images/work-1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <a href="images/gallery-1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
               <span class="icon-expand"></span>
             </a>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="project">
-            <img src="images/work-3.jpg" class="img-fluid" alt="Colorlib Template">
+            <img src="images/gallery-4.jpg" class="img-fluid" alt="Colorlib Template">
             <div class="text">
               <span>Stock</span>
               <h3><a href="project.html">Lots</a></h3>
             </div>
-            <a href="images/work-3.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <a href="images/gallery-4.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
               <span class="icon-expand"></span>
             </a>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="project">
-            <img src="images/work-2.jpg" class="img-fluid" alt="Colorlib Template">
+            <img src="images/gallery-3.jpg" class="img-fluid" alt="Colorlib Template">
             <div class="text">
               <span>Long</span>
               <h3><a href="project.html">Burn</a></h3>
             </div>
-            <a href="images/work-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <a href="images/gallery-3.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
               <span class="icon-expand"></span>
             </a>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="project">
-            <img src="images/work-4.jpg" class="img-fluid" alt="Colorlib Template">
+            <img src="images/gallery-2.jpg" class="img-fluid" alt="Colorlib Template">
             <div class="text">
               <span>Custom</span>
               <h3><a href="project.html">Packaging</a></h3>
             </div>
-            <a href="images/work-4.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <a href="images/gallery-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
               <span class="icon-expand"></span>
             </a>
           </div>
