--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
 			<div class="row no-gutters">
 				<div class="col-md-6 col-lg-3 ftco-animate">
 					<div class="project">
-						<img src="images/work-1.jpg" class="img-fluid" alt="Colorlib Template">
+						<img src="images/work-11.jpg" class="img-fluid" alt="Colorlib Template">
 						<div class="text">
 							<span>Best</span>
-							<h3><a href="project.html">Coconut</a></h3>
+							<h3><a href="project.html">Charcoal</a></h3>
 						</div>
 						<a href="images/work-1.jpg"
 							class="icon image-popup d-flex justify-content-center align-items-center">
@@ -305,10 +305,10 @@
 				<div class="col-md-12 ftco-animate">
 					<div class="carousel-team owl-carousel">
 						<div class="item">
-							<a href="https://linkedin.com/in/mrfcreative" target="_blank" class="team text-center">
+							<a href="https://instagram.com/radityabowo/" target="_blank" class="team text-center">
 								<div class="img" style="background-image: url(images/stylist-2.jpg);"></div>
-								<h2>Muhammad Rizal F.</h2>
-								<span class="position">Director</span>
+								<h2>Rudi Aditya</h2>
+								<span class="position">Public Relation</span>
 							</a>
 						</div>
 						<div class="item">
