--- a/about.html
+++ b/about.html
@@ -182,10 +182,10 @@
 				<div class="col-md-12 ftco-animate">
 					<div class="carousel-team owl-carousel">
 						<div class="item">
-							<a href="https://linkedin.com/in/mrfcreative" target="_blank" class="team text-center">
+							<a href="https://instagram.com/radityabowo/" target="_blank" class="team text-center">
 								<div class="img" style="background-image: url(images/stylist-2.jpg);"></div>
-								<h2>Muhammad Rizal F.</h2>
-								<span class="position">Director</span>
+								<h2>Rudi Aditya</h2>
+								<span class="position">Public Relation</span>
 							</a>
 						</div>
 						<div class="item">
@@ -206,7 +206,7 @@
 							<a href="#" class="team text-center">
 								<div class="img" style="background-image: url(images/stylist-5.jpg);"></div>
 								<h2>Muhammad Rizal F.</h2>
-								<span class="position">Public Relation</span>
+								<span class="position">Director</span>
 							</a>
 						</div>
 					</div>
@@ -214,7 +214,6 @@
 			</div>
 		</div>
 	</section>
-
 
 	<section class="ftco-section ftco-no-pt ftco-no-pb">
 		<div class="container-fluid px-0">
