--- a/index.html
+++ b/index.html
@@ -187,12 +187,12 @@
 			<div class="row no-gutters">
 				<div class="col-md-6 col-lg-3 ftco-animate">
 					<div class="project">
-						<img src="images/work-11.jpg" class="img-fluid" alt="Colorlib Template">
+						<img src="images/gallery-4.jpg" class="img-fluid" alt="Colorlib Template">
 						<div class="text">
 							<span>Best</span>
 							<h3><a href="project.html">Charcoal</a></h3>
 						</div>
-						<a href="images/work-1.jpg"
+						<a href="images/gallery-4.jpg"
 							class="icon image-popup d-flex justify-content-center align-items-center">
 							<span class="icon-expand"></span>
 						</a>
