--- a/gallery.html
+++ b/gallery.html
@@ -288,15 +288,14 @@
             <h2 class="ftco-heading-2">Have a Questions?</h2>
             <div class="block-23 mb-3">
               <ul>
-                <li><span class="icon icon-map-marker"></span><span class="text">Jalan Damar 5 No. 10
-                    <br> Komplek Buana Soetta, <br> Gedebage, Bandung, <br> Indonesia</span></li>
-                <li><a
-                    href="https://api.whatsapp.com/send?phone=6285722754077&text=I%27m%20interested%20in%20your%20briquette%20for%20sale"
-                    target="_blank"><span class="icon icon-phone"></span><span class="text">+62 857
-                      2275
-                      4077</span></a></li>
-                <li><a href="mailto:paramarthaagro@gmail.com" target="_blank"><span
-                      class="icon icon-envelope"></span><span class="text">info@paramarthaagro.com</span></a></li>
+                <li><span class="icon icon-map-marker"></span><span class="text">Jalan Gedebage Selatan <br> near of Container Terminal <br> Bandung, Indonesia <br> 40294</span></li>
+								<li><a href="https://api.whatsapp.com/send?phone=6285722754077&text=I%27m%20interested%20in%20your%20briquette%20for%20sale"
+										target="_blank"><span class="icon icon-phone"></span><span class="text">+62 857
+											2275
+											4077</span></a></li>
+								<li><a href="mailto:paramarthaagro@gmail.com" target="_blank"><span
+											class="icon icon-envelope"></span><span
+											class="text">info@paramarthaagro.com</span></a></li>
               </ul>
             </div>
           </div>
