--- a/contact.html
+++ b/contact.html
@@ -129,14 +129,11 @@
 			<div class="row justify-content-center pb-3">
 				<div class="col-md-10 heading-section text-center ftco-animate">
 					<h2 class="mb-4">Location</h2>
-					<span class="subheading">Jalan Damar 5 No. 10 <br> Komplek Buana Soetta <br>Bandung, Indonesia</span>
+					<span class="subheading">Jalan Gedebage Selatan <br> Near of Container Terminal <br>Bandung, Indonesia</span>
 				</div>
 			</div>
 			<div class="map">
-				<iframe
-					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1980.2835435574827!2d107.68863513645914!3d-6.9422276751776035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e384fce4d97d%3A0xe06ba18fb4d2e414!2sKomplek%20Perumahan%20Buana%20Soetta%20Residence!5e0!3m2!1sen!2sid!4v1612084178651!5m2!1sen!2sid"
-					width="1200" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
-					tabindex="0"></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1177.4841342487803!2d107.69138861286385!3d-6.942030099670682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6cf129f40d9600a!2sKantor%20Terminal%20Petikemas%20Bandung%20Gedebage!5e0!3m2!1sen!2sid!4v1612487153294!5m2!1sen!2sid" width="1200" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 			</div>
 		</div>
 	</section>
@@ -196,14 +193,9 @@
 						<h2 class="ftco-heading-2">Have a Questions?</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><span class="icon icon-map-marker"></span><span class="text">Jalan Damar 5
-										No.
-										10
-										<br> Komplek Buana Soetta, <br> Gedebage, Bandung, <br> Indonesia</span>
-								</li>
+								<li><span class="icon icon-map-marker"></span><span class="text">Jalan Gedebage Selatan <br> near of Container Terminal <br> Bandung, Indonesia <br> 40294</span></li>
 								<li><a href="https://api.whatsapp.com/send?phone=6285722754077&text=I%27m%20interested%20in%20your%20briquette%20for%20sale"
-										target="_blank"><span class="icon icon-phone"></span><span class="text">+62
-											857
+										target="_blank"><span class="icon icon-phone"></span><span class="text">+62 857
 											2275
 											4077</span></a></li>
 								<li><a href="mailto:paramarthaagro@gmail.com" target="_blank"><span
