--- a/contact.html
+++ b/contact.html
@@ -129,7 +129,7 @@
 			<div class="row justify-content-center pb-3">
 				<div class="col-md-10 heading-section text-center ftco-animate">
 					<h2 class="mb-4">Location</h2>
-					<span class="subheading">Jalan Gedebage Selatan <br> Near of Container Terminal <br>Bandung, Indonesia</span>
+					<span class="subheading">Jalan Gedebage Selatan <br>Bandung, Indonesia <br> 40294</span>
 				</div>
 			</div>
 			<div class="map">
@@ -193,7 +193,7 @@
 						<h2 class="ftco-heading-2">Have a Questions?</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><span class="icon icon-map-marker"></span><span class="text">Jalan Gedebage Selatan <br> near of Container Terminal <br> Bandung, Indonesia <br> 40294</span></li>
+								<li><span class="icon icon-map-marker"></span><span class="text">Jalan Gedebage Selatan <br> Bandung, Indonesia <br> 40294</span></li>
 								<li><a href="https://api.whatsapp.com/send?phone=6285722754077&text=I%27m%20interested%20in%20your%20briquette%20for%20sale"
 										target="_blank"><span class="icon icon-phone"></span><span class="text">+62 857
 											2275
