--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
 								<img src="images/logo1.png" alt="Homepage">
 							</a>
 						</h1>
-						<h2 style="font-family: Kaushan Script, cursive; text-transform: capitalize; font-size: 20px; color: #4b4b4d;">We just not sale, We Build Trust!</h2>
+						<h2
+							style="font-family: Kaushan Script, cursive; text-transform: capitalize; font-size: 20px; color: #4b4b4d;">
+							We just not sale, We Build Trust!</h2>
 						<p>A prosperous country called Indonesia which has a diversity of cultures, resources and
 							extraordinary natural beauty. Water flows from the mountains, anything and everything can be
 							planted until it becomes a very high quality seed where you can plant wood into crops. Deep
@@ -312,7 +314,8 @@
 							</a>
 						</div>
 						<div class="item">
-							<a href="https://www.linkedin.com/in/nanda-amelia-lysti-19b695176/" target="_blank" class="team text-center">
+							<a href="https://www.linkedin.com/in/nanda-amelia-lysti-19b695176/" target="_blank"
+								class="team text-center">
 								<div class="img" style="background-image: url(images/stylist-3.jpg);"></div>
 								<h2>Nanda Amelia L.</h2>
 								<span class="position">Marketing Manager</span>
@@ -354,15 +357,16 @@
 							<div class="item">
 								<div class="testimony-wrap pb-4">
 									<div class="text">
-										<p class="mb-4">Far far away, behind the word mountains, far from the countries
-											Vokalia and Consonantia, there live the blind texts.</p>
+										<p class="mb-4">We have bought their product several containers. "Nice" things
+											about doing business with them is their service, maybe we will buy it again
+											in the near future.</p>
 									</div>
 									<div class="d-flex">
-										<div class="user-img" style="background-image: url(images/stylist-1.jpg)">
+										<div class="user-img" style="background-image: url(images/person_1.jpg)">
 										</div>
 										<div class="pos ml-3">
-											<p class="name">Jeff Nucci</p>
-											<span class="position">Businessman</span>
+											<p class="name">Emilim Hamit</p>
+											<span class="position">Turkish Businessman</span>
 										</div>
 									</div>
 								</div>
@@ -370,15 +374,14 @@
 							<div class="item">
 								<div class="testimony-wrap pb-4">
 									<div class="text">
-										<p class="mb-4">Far far away, behind the word mountains, far from the countries
-											Vokalia and Consonantia, there live the blind texts.</p>
+										<p class="mb-4">Charcoal briquettes from Indonesia are very good for our country as a raw material for shisha. We really appreciate their service.</p>
 									</div>
 									<div class="d-flex">
-										<div class="user-img" style="background-image: url(images/stylist-2.jpg)">
+										<div class="user-img" style="background-image: url(images/person_2.jpg)">
 										</div>
 										<div class="pos ml-3">
-											<p class="name">Jeff Nucci</p>
-											<span class="position">Businessman</span>
+											<p class="name">Roman Volodymyr</p>
+											<span class="position">Ukraine Businessman</span>
 										</div>
 									</div>
 								</div>
@@ -386,47 +389,14 @@
 							<div class="item">
 								<div class="testimony-wrap pb-4">
 									<div class="text">
-										<p class="mb-4">Far far away, behind the word mountains, far from the countries
-											Vokalia and Consonantia, there live the blind texts.</p>
+										<p class="mb-4">It is difficult to find a business partner like them in carrying out the company's commitment to quality. They are amazing!</p>
 									</div>
 									<div class="d-flex">
-										<div class="user-img" style="background-image: url(images/stylist-3.jpg)">
+										<div class="user-img" style="background-image: url(images/person_3.jpg)">
 										</div>
 										<div class="pos ml-3">
-											<p class="name">Jeff Nucci</p>
-											<span class="position">Businessman</span>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="item">
-								<div class="testimony-wrap pb-4">
-									<div class="text">
-										<p class="mb-4">Far far away, behind the word mountains, far from the countries
-											Vokalia and Consonantia, there live the blind texts.</p>
-									</div>
-									<div class="d-flex">
-										<div class="user-img" style="background-image: url(images/stylist-4.jpg)">
-										</div>
-										<div class="pos ml-3">
-											<p class="name">Jeff Nucci</p>
-											<span class="position">Businessman</span>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="item">
-								<div class="testimony-wrap pb-4">
-									<div class="text">
-										<p class="mb-4">Far far away, behind the word mountains, far from the countries
-											Vokalia and Consonantia, there live the blind texts.</p>
-									</div>
-									<div class="d-flex">
-										<div class="user-img" style="background-image: url(images/stylist-5.jpg)">
-										</div>
-										<div class="pos ml-3">
-											<p class="name">Jeff Nucci</p>
-											<span class="position">Businessman</span>
+											<p class="name">Ahmed Baaqir</p>
+											<span class="position">Arabic Businessman</span>
 										</div>
 									</div>
 								</div>
@@ -454,7 +424,8 @@
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
 							<li class="ftco-animate"><a href="https://linkedin.com/company/Paramartha-Agro"
 									target="_blank"><span class="icon-linkedin"></span></a></li>
-							<li class="ftco-animate"><a href="https://www.facebook.com/Paramartha-Agro-106958891377926" target="_blank"><span class="icon-facebook"></span></a></li>
+							<li class="ftco-animate"><a href="https://www.facebook.com/Paramartha-Agro-106958891377926"
+									target="_blank"><span class="icon-facebook"></span></a></li>
 							<li class="ftco-animate"><a href="https://instagram.com/paramarthagro" target="_blank"><span
 										class="icon-instagram"></span></a></li>
 						</ul>
@@ -487,7 +458,8 @@
 						<h2 class="ftco-heading-2">Have a Questions?</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><span class="icon icon-map-marker"></span><span class="text">Jalan Gedebage Selatan <br>   Bandung, Indonesia <br> 40294</span></li>
+								<li><span class="icon icon-map-marker"></span><span class="text">Jalan Gedebage Selatan
+										<br> Bandung, Indonesia <br> 40294</span></li>
 								<li><a href="https://api.whatsapp.com/send?phone=6285722754077&text=I%27m%20interested%20in%20your%20briquette%20for%20sale"
 										target="_blank"><span class="icon icon-phone"></span><span class="text">+62 857
 											2275
