--- a/gallery.html
+++ b/gallery.html
@@ -139,96 +139,96 @@
         </div>
         <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="project">
-            <img src="images/work-5.jpg" class="img-fluid" alt="Colorlib Template">
+            <img src="images/bean.jpg" class="img-fluid" alt="Colorlib Template">
             <div class="text">
               <span>Organic</span>
               <h3><a href="project.html">Coffee</a></h3>
             </div>
-            <a href="images/work-5.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <a href="images/bean.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
               <span class="icon-expand"></span>
             </a>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="project">
-            <img src="images/work-8.jpg" class="img-fluid" alt="Colorlib Template">
+            <img src="images/gallery-10.jpg" class="img-fluid" alt="Colorlib Template">
             <div class="text">
-              <span>plucked</span>
-              <h3><a href="project.html">With Love</a></h3>
+              <span>Java</span>
+              <h3><a href="project.html">Preanger</a></h3>
             </div>
-            <a href="images/work-8.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <a href="images/gallery-10.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
               <span class="icon-expand"></span>
             </a>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="project">
-            <img src="images/work-6.jpg" class="img-fluid" alt="Colorlib Template">
+            <img src="images/gallery-9.jpg" class="img-fluid" alt="Colorlib Template">
             <div class="text">
               <span>Processing of</span>
               <h3><a href="project.html">Pangalengan, West Java</a></h3>
             </div>
-            <a href="images/work-6.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <a href="images/gallery-9.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
               <span class="icon-expand"></span>
             </a>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="project">
-            <img src="images/work-7.jpg" class="img-fluid" alt="Colorlib Template">
+            <img src="images/machine.jpg" class="img-fluid" alt="Colorlib Template">
             <div class="text">
               <span>Java</span>
               <h3><a href="project.html">Preanger</a></h3>
             </div>
-            <a href="images/work-7.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <a href="images/machine.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
               <span class="icon-expand"></span>
             </a>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="project">
-            <img src="images/work-7.jpg" class="img-fluid" alt="Colorlib Template">
+            <img src="images/coco.jpg" class="img-fluid" alt="Colorlib Template">
             <div class="text">
-              <span>Java</span>
-              <h3><a href="project.html">Preanger</a></h3>
+              <span>plucked</span>
+              <h3><a href="project.html">With Love</a></h3>
             </div>
-            <a href="images/work-7.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <a href="images/coco.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
               <span class="icon-expand"></span>
             </a>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="project">
-            <img src="images/work-7.jpg" class="img-fluid" alt="Colorlib Template">
+            <img src="images/half.jpg" class="img-fluid" alt="Colorlib Template">
             <div class="text">
               <span>Java</span>
               <h3><a href="project.html">Preanger</a></h3>
             </div>
-            <a href="images/work-7.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <a href="images/half.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
               <span class="icon-expand"></span>
             </a>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="project">
-            <img src="images/work-7.jpg" class="img-fluid" alt="Colorlib Template">
+            <img src="images/work-2.jpg" class="img-fluid" alt="Colorlib Template">
             <div class="text">
               <span>Java</span>
               <h3><a href="project.html">Preanger</a></h3>
             </div>
-            <a href="images/work-7.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <a href="images/work-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
               <span class="icon-expand"></span>
             </a>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="project">
-            <img src="images/work-7.jpg" class="img-fluid" alt="Colorlib Template">
+            <img src="images/gallery-8.jpg" class="img-fluid" alt="Colorlib Template">
             <div class="text">
               <span>Java</span>
               <h3><a href="project.html">Preanger</a></h3>
             </div>
-            <a href="images/work-7.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <a href="images/gallery-8.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
               <span class="icon-expand"></span>
             </a>
           </div>
