--- a/index.html
+++ b/index.html
@@ -307,6 +307,13 @@
 				<div class="col-md-12 ftco-animate">
 					<div class="carousel-team owl-carousel">
 						<div class="item">
+							<a href="#" class="team text-center">
+								<div class="img" style="background-image: url(images/stylist-4.jpg);"></div>
+								<h2>Faisal Ramdhani</h2>
+								<span class="position">Financial</span>
+							</a>
+						</div>
+						<div class="item">
 							<a href="https://instagram.com/radityabowo/" target="_blank" class="team text-center">
 								<div class="img" style="background-image: url(images/stylist-2.jpg);"></div>
 								<h2>Rudi Aditya</h2>
@@ -319,13 +326,6 @@
 								<div class="img" style="background-image: url(images/stylist-3.jpg);"></div>
 								<h2>Nanda Amelia L.</h2>
 								<span class="position">Marketing Manager</span>
-							</a>
-						</div>
-						<div class="item">
-							<a href="#" class="team text-center">
-								<div class="img" style="background-image: url(images/stylist-4.jpg);"></div>
-								<h2>Rachel Clinton</h2>
-								<span class="position">Financial Manager</span>
 							</a>
 						</div>
 						<div class="item">
